--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,6 @@ dist-ssr
 Testamonials.txt
 
 social-banner-generator.html
+
+# Large video files (use optimized versions instead)
+src/Assets/Photos/Project-Photos/Portfolio/PortfolioDemo.mp4
